# ks

./: .gitignore  CMakeLists.txt  CREDITS  INSTALL  LICENSE  README  README.md  README.rst  make.gnu.inc  make.inc  make.intel.inc  make.orig.inc  make.osx.inc  makefile  set_env.sh  set_env_osx.sh  set_env_tacc.sh
frame/: dgsks.c  dgsks_mic.c  dgsks_ref.c  dgsks_ref_mic.c  ks_kernel.c  ks_util.c  omp_dgsks_list.cpp  omp_dgsks_list_mic.cpp
frame/mic/: dgsks_mic.c  dgsks_ref_mic.c  omp_dgsks_list_mic.cpp
include/: gsks_internal.h  ks.h  ks_mic.h  omp_dgsks_list.hpp  omp_dgsks_list_mic.hpp
micro_kernel/mic/: ks_gaussian_asm_d8x30.c  ks_gaussian_int_d16x14.c  ks_gaussian_int_d24x8.c  ks_rank_k_int_d16x14.c
micro_kernel/mic/knc/: bli_dgemm_opt_30x8.c  ks_gaussian_asm_d24x8.c  ks_gaussian_int_d16x14_var2.c  ks_gaussian_int_d16x8.c  ks_rank_k_asm_d30x8.c  ks_rank_k_asm_d8x30.c
micro_kernel/mic/knl/: avx_type.h  bli_dgemm_opt_24x8.c  epanechnikov_int_d8x6.c  gaussian_int_d24x8.c  gsks_config.h  gsks_kernel.h  multiquadratic_int_d8x6.c  polynomial_int_d24x8.c  quartic_int_d8x6.c  rank_k_int_d24x8.c  rank_k_int_d24x8.h  rank_k_ref_d24x8.h  tanh_int_d8x6.c  variable_bandwidth_gaussian_int_d8x6.c
micro_kernel/x86_64/haswell/: epanechnikov_int_d8x6.c  gaussian_int_d8x6.c  gsks_config.h  gsks_kernel.h  ks_epanechnikov_int_d8x4.c  ks_gaussian_int_d8x4.c  ks_gaussian_svml_d8x4.c  ks_kernel.h  ks_kernel_summation_int_d8x4.h  ks_laplace3d_int_d8x4.c  ks_rank_k_asm_d8x4.c  ks_rank_k_int_d8x4.c  ks_rank_k_int_d8x4.h  laplace_int_d8x6.c  multiquadratic_int_d8x6.c  polynomial_int_d8x6.c  quartic_int_d8x6.c  rank_k_asm_d8x6.c  rank_k_int_d8x6.c  tanh_int_d8x6.c  variable_bandwidth_gaussian_int_d8x6.c
micro_kernel/x86_64/haswell/old/: ks_kernel.h  ks_matvec_int_d12x4.h  ks_multiquadratic_int_d12x4.c  ks_multiquadratic_int_d8x4.c  ks_polynomial_int_d8x4.c  ks_rank_k_int_d12x4.c  ks_rank_k_int_d12x4.h  ks_rank_k_opt_d12x4.h  ks_variable_bandwidth_gaussian_int_d8x4.c
micro_kernel/x86_64/sandybridge/: avx_type.h  exp_int_d4.c  gsks_config.h  gsks_kernel.h  knn_int_d8x4_var2.c  ks_epanechnikov_int_d8x4.c  ks_exp_int_d8x4.h  ks_gaussian_asm_d8x4.c  ks_gaussian_int_d8x4.c  ks_gaussian_int_d8x4_var2.c  ks_gaussian_svml_d8x4.c  ks_kernel.h  ks_laplace3d_int_d8x4.c  ks_multiquadratic_int_d8x4.c  ks_polynomial_int_d8x4.c  ks_quartic_int_d8x4.c  ks_rank_k_asm_d8x4.c  ks_rank_k_int_d8x4.c  ks_rank_k_int_d8x4.h  ks_rank_k_int_d8x4_unroll_4.c  ks_tanh_int_d8x4.c  ks_variable_bandwidth_gaussian_asm_d8x4_var2.c  ks_variable_bandwidth_gaussian_int_d8x4.c
micro_kernel/x86_64/sandybridge/math/: exp_int_d4.c  pow_int_d4.c
micro_kernel/x86_64/sandybridge/old/: ks_gaussian_asm_d8x4.c  ks_gaussian_asm_d8x4_var2.c  ks_gaussian_int_d8x4.c  ks_gaussian_svml_d8x4_var2.c
python/: example.py  gsks.py
test/: makefile  run_dgsks.sh  run_dgsks_list.sh  tacc_run_dgsks.sh  test_dgsks.c  test_dgsks_list.cpp  test_dgsks_mic.c  test_rank_k_micro.c  test_vdexp.c
test/mic/: test_dgsks_list_mic.cpp
